log
do., 13 de mar. de 2022 12:11:33: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
bash: gcc: command not found
Compilation failed
d52f2d1
do., 13 de mar. de 2022 12:12:01: 
bash: gcc: command not found
Compilation failed
8aef79a
do., 13 de mar. de 2022 18:32:40: 
bash: gcc: command not found
Compilation failed
907e63b
Sun Mar 13 19:48:46 HSP 2022: 
In file included from test.c:5:0:
exercises.c:43:6: error: redefinition of 'sumaNultimos'
 void sumaNultimos(int a[], int n, int m, int * suma) {
      ^~~~~~~~~~~~
exercises.c:21:6: note: previous definition of 'sumaNultimos' was here
 void sumaNultimos(int a[], int n, int m, int *suma){
      ^~~~~~~~~~~~
Compilation failed
837da09
Sun Mar 13 19:49:24 HSP 2022: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|6
total_score: 10/70
55bbdab
Sun Mar 13 19:58:57 HSP 2022: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 20/70
85fe284
Sun Mar 13 20:36:19 HSP 2022: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:66:22: error: expected expression before ']' token
    p.nombre = nombre[];
                      ^
exercises.c:67:16: error: expected expression before ']' token
    p.rut = rut[];
                ^
exercises.c:69:11: error: incompatible types when returning type 'Persona {aka struct <anonymous>}' but 'Persona * {aka struct <anonymous> *}' was expected
    return p;
           ^
exercises.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ec73b21
Sun Mar 13 21:04:12 HSP 2022: 
 exercises.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
e5e59de
Sun Mar 13 21:25:21 HSP 2022: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
6926081
Sun Mar 13 21:27:03 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
7d78159
Sun Mar 13 22:07:37 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
7758450
